style: 学習設定ウィンドウのラベルを左揃えに変更
- text-align: left追加
- align-self: flex-start追加で垂直方向も上揃え

--- a/src/App.css
+++ b/src/App.css
@@ -10813,6 +10813,8 @@ option {
   color: #344054;
   white-space: nowrap;
   font-size: 0.95em;
+  text-align: left;
+  align-self: flex-start;
 }
 
 .compact-select {
